merge Combo into Input; rename modules